fix: add version info (#27)
* fix: add version info to the dashboard

* fix: failing tests
