# backend/apps/accounts/views/login.py
@@ -4,6 +4,7 @@ from logging import Logger, getLogger
 from typing import Any
 
 from django.contrib.auth import authenticate
+from drf_spectacular.utils import extend_schema
 from rest_framework import status
 from rest_framework.permissions import AllowAny
 from rest_framework.request import Request
@@ -48,6 +49,7 @@ class UserLoginView(APIView):
         return ip
 
     # pylint: disable=too-many-branches,too-many-statements
+    @extend_schema(operation_id="auth_login", tags=["Accounts"])
     def post(self, request: Request) -> Response:
         """Handle user login."""
         system_settings = PublicAccountSettings.get_settings()
